--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,5 +1,7 @@
 column_width = 120
-line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
+collapse_simple_statement = "Always"
+call_parentheses = "Always"
+line_endings = "Unix"
 quote_style = "AutoPreferDouble"
